-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 15
-
Component/s: hotspot
-
b29
-
x86_64
-
linux
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8248281 | 16 | Markus Grönlund | P2 | Resolved | Fixed | b04 |
| JDK-8250093 | 15.0.2 | Markus Grönlund | P2 | Resolved | Fixed | b01 |
| JDK-8250392 | 15.0.1 | Markus Grönlund | P2 | Resolved | Fixed | b03 |
The following test failed in the JDK15 CI:
applications/sparkexamples/SparkExamples24H.java
Here's a snippet from the log file:
[stress.process.out] Within Set Sum of Squared Errors = 0.11999999999994547
[stress.process.out] Cluster Centers:
[stress.process.out] [0.1,0.1,0.1]
[stress.process.out] [9.1,9.1,9.1]
[stress.process.out] 2020-06-20 20:28:20 INFO AbstractConnector:318 - Stopped Spark@5b69ee1a{HTTP/1.1,[http/1.1]}{0.0.0.0:4040}
[stress.process.out] 2020-06-20 20:28:20 INFO BlockManagerInfo:54 - Removed broadcast_2_piece0 on ol7-build-test-967467.s4.javaplatfo1iad.oraclevcn.com:45509 in memory (size: 39.7 KB, free: 9.2 GB)
[stress.process.out] 2020-06-20 20:28:20 INFO SparkUI:54 - Stopped Spark web UI at http://ol7-build-test-967467.s4.javaplatfo1iad.oraclevcn.com:4040
[stress.process.out] 2020-06-20 20:28:20 INFO MapOutputTrackerMasterEndpoint:54 - MapOutputTrackerMasterEndpoint stopped!
[stress.process.out] 2020-06-20 20:28:20 INFO MemoryStore:54 - MemoryStore cleared
[stress.process.out] 2020-06-20 20:28:20 INFO BlockManager:54 - BlockManager stopped
[stress.process.out] 2020-06-20 20:28:20 INFO BlockManagerMaster:54 - BlockManagerMaster stopped
[stress.process.out] 2020-06-20 20:28:20 INFO OutputCommitCoordinator$OutputCommitCoordinatorEndpoint:54 - OutputCommitCoordinator stopped!
[stress.process.out] #
[stress.process.out] # A fatal error has been detected by the Java Runtime Environment:
[stress.process.out] #
[stress.process.out] # SIGSEGV (0xb) at pc=0x00007f0ea9663018, pid=12348, tid=12375
[stress.process.out] #
[stress.process.out] # JRE version: Java(TM) SE Runtime Environment (15.0+28) (build 15-ea+28-1384)
[stress.process.out] # Java VM: Java HotSpot(TM) 64-Bit Server VM (15-ea+28-1384, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
[stress.process.out] # Problematic frame:
[stress.process.out] # C 0x00007f0ea9663018
[stress.process.out] #
[stress.process.out] # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S187/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/867d16c2-ae90-48f1-8c35-ad63b4ec07f1/runs/8d2413c1-8620-43a5-a688-4693110d27b5/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_sparkexamples_SparkExamples24H_java/scratch/0/core.12348)
[stress.process.out] #
[stress.process.out] # JFR recording file will be written. Location: /opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S187/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/867d16c2-ae90-48f1-8c35-ad63b4ec07f1/runs/8d2413c1-8620-43a5-a688-4693110d27b5/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_sparkexamples_SparkExamples24H_java/scratch/0/hs_err_pid12348.jfr
[stress.process.out] #
[stress.process.out] Unsupported internal testing APIs have been used.
[stress.process.out]
[stress.process.out] # An error report file with more information is saved as:
[stress.process.out] # /opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S187/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/867d16c2-ae90-48f1-8c35-ad63b4ec07f1/runs/8d2413c1-8620-43a5-a688-4693110d27b5/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_sparkexamples_SparkExamples24H_java/scratch/0/hs_err_pid12348.log
[stress.process.out] #
[stress.process.out] # If you would like to submit a bug report, please visit:
[stress.process.out] # https://bugreport.java.com/bugreport/crash.jsp
[stress.process.out] #
[2020-06-20T20:29:09.148799989Z] Gathering output for process 23901
[2020-06-20T20:29:09.157518487Z] Waiting for completion for process 23901
[2020-06-20T20:29:09.157590052Z] Waiting for completion finished for process 23901
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007f0f30222020): JavaThread "JFR Recorder Thread" daemon [_thread_in_vm, id=12375, stack(0x00007f0eb3dfd000,0x00007f0eb3efe000)]
Stack: [0x00007f0eb3dfd000,0x00007f0eb3efe000], sp=0x00007f0eb3efc898, free space=1022k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
C 0x00007f0ea9663018
V [libjvm.so+0x7e01f2] void JfrEpochStorageHost<JfrBuffer, JfrMspaceRemoveRetrieval>::iterate<EpochDispatchOp<JfrEpochQueue<JfrEpochQueueKlassPolicy>::ElementDispatch<KlassFunctor> > >(EpochDispatchOp<JfrEpochQueue<JfrEpochQueueKlassPolicy>::ElementDispatch<KlassFunctor> >&, bool)+0x62
V [libjvm.so+0x7df6be] JfrTraceIdKlassQueue::iterate(void (*)(Klass*), bool)+0x3e
V [libjvm.so+0x7ea089] JfrTypeSet::serialize(JfrCheckpointWriter*, JfrCheckpointWriter*, bool, bool)+0x14b9
V [libjvm.so+0x78b6ca] JfrCheckpointManager::flush_type_set()+0xfa
V [libjvm.so+0x7c4c6e] JfrRecorderService::flush()+0x8e
V [libjvm.so+0x7c5567] JfrRecorderService::invoke_flush()+0x77
V [libjvm.so+0x7c5c28] JfrRecorderService::flushpoint()+0x98
V [libjvm.so+0x7c73a8] recorderthread_entry(JavaThread*, Thread*)+0x228
V [libjvm.so+0xcf0a7e] JavaThread::thread_main_inner()+0xde
V [libjvm.so+0xcf58ed] Thread::call_run()+0xfd
V [libjvm.so+0xb486a7] thread_native_entry(Thread*)+0xe7
applications/sparkexamples/SparkExamples24H.java
Here's a snippet from the log file:
[stress.process.out] Within Set Sum of Squared Errors = 0.11999999999994547
[stress.process.out] Cluster Centers:
[stress.process.out] [0.1,0.1,0.1]
[stress.process.out] [9.1,9.1,9.1]
[stress.process.out] 2020-06-20 20:28:20 INFO AbstractConnector:318 - Stopped Spark@5b69ee1a{HTTP/1.1,[http/1.1]}{0.0.0.0:4040}
[stress.process.out] 2020-06-20 20:28:20 INFO BlockManagerInfo:54 - Removed broadcast_2_piece0 on ol7-build-test-967467.s4.javaplatfo1iad.oraclevcn.com:45509 in memory (size: 39.7 KB, free: 9.2 GB)
[stress.process.out] 2020-06-20 20:28:20 INFO SparkUI:54 - Stopped Spark web UI at http://ol7-build-test-967467.s4.javaplatfo1iad.oraclevcn.com:4040
[stress.process.out] 2020-06-20 20:28:20 INFO MapOutputTrackerMasterEndpoint:54 - MapOutputTrackerMasterEndpoint stopped!
[stress.process.out] 2020-06-20 20:28:20 INFO MemoryStore:54 - MemoryStore cleared
[stress.process.out] 2020-06-20 20:28:20 INFO BlockManager:54 - BlockManager stopped
[stress.process.out] 2020-06-20 20:28:20 INFO BlockManagerMaster:54 - BlockManagerMaster stopped
[stress.process.out] 2020-06-20 20:28:20 INFO OutputCommitCoordinator$OutputCommitCoordinatorEndpoint:54 - OutputCommitCoordinator stopped!
[stress.process.out] #
[stress.process.out] # A fatal error has been detected by the Java Runtime Environment:
[stress.process.out] #
[stress.process.out] # SIGSEGV (0xb) at pc=0x00007f0ea9663018, pid=12348, tid=12375
[stress.process.out] #
[stress.process.out] # JRE version: Java(TM) SE Runtime Environment (15.0+28) (build 15-ea+28-1384)
[stress.process.out] # Java VM: Java HotSpot(TM) 64-Bit Server VM (15-ea+28-1384, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
[stress.process.out] # Problematic frame:
[stress.process.out] # C 0x00007f0ea9663018
[stress.process.out] #
[stress.process.out] # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S187/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/867d16c2-ae90-48f1-8c35-ad63b4ec07f1/runs/8d2413c1-8620-43a5-a688-4693110d27b5/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_sparkexamples_SparkExamples24H_java/scratch/0/core.12348)
[stress.process.out] #
[stress.process.out] # JFR recording file will be written. Location: /opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S187/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/867d16c2-ae90-48f1-8c35-ad63b4ec07f1/runs/8d2413c1-8620-43a5-a688-4693110d27b5/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_sparkexamples_SparkExamples24H_java/scratch/0/hs_err_pid12348.jfr
[stress.process.out] #
[stress.process.out] Unsupported internal testing APIs have been used.
[stress.process.out]
[stress.process.out] # An error report file with more information is saved as:
[stress.process.out] # /opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S187/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/867d16c2-ae90-48f1-8c35-ad63b4ec07f1/runs/8d2413c1-8620-43a5-a688-4693110d27b5/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_sparkexamples_SparkExamples24H_java/scratch/0/hs_err_pid12348.log
[stress.process.out] #
[stress.process.out] # If you would like to submit a bug report, please visit:
[stress.process.out] # https://bugreport.java.com/bugreport/crash.jsp
[stress.process.out] #
[2020-06-20T20:29:09.148799989Z] Gathering output for process 23901
[2020-06-20T20:29:09.157518487Z] Waiting for completion for process 23901
[2020-06-20T20:29:09.157590052Z] Waiting for completion finished for process 23901
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007f0f30222020): JavaThread "JFR Recorder Thread" daemon [_thread_in_vm, id=12375, stack(0x00007f0eb3dfd000,0x00007f0eb3efe000)]
Stack: [0x00007f0eb3dfd000,0x00007f0eb3efe000], sp=0x00007f0eb3efc898, free space=1022k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
C 0x00007f0ea9663018
V [libjvm.so+0x7e01f2] void JfrEpochStorageHost<JfrBuffer, JfrMspaceRemoveRetrieval>::iterate<EpochDispatchOp<JfrEpochQueue<JfrEpochQueueKlassPolicy>::ElementDispatch<KlassFunctor> > >(EpochDispatchOp<JfrEpochQueue<JfrEpochQueueKlassPolicy>::ElementDispatch<KlassFunctor> >&, bool)+0x62
V [libjvm.so+0x7df6be] JfrTraceIdKlassQueue::iterate(void (*)(Klass*), bool)+0x3e
V [libjvm.so+0x7ea089] JfrTypeSet::serialize(JfrCheckpointWriter*, JfrCheckpointWriter*, bool, bool)+0x14b9
V [libjvm.so+0x78b6ca] JfrCheckpointManager::flush_type_set()+0xfa
V [libjvm.so+0x7c4c6e] JfrRecorderService::flush()+0x8e
V [libjvm.so+0x7c5567] JfrRecorderService::invoke_flush()+0x77
V [libjvm.so+0x7c5c28] JfrRecorderService::flushpoint()+0x98
V [libjvm.so+0x7c73a8] recorderthread_entry(JavaThread*, Thread*)+0x228
V [libjvm.so+0xcf0a7e] JavaThread::thread_main_inner()+0xde
V [libjvm.so+0xcf58ed] Thread::call_run()+0xfd
V [libjvm.so+0xb486a7] thread_native_entry(Thread*)+0xe7
- backported by
-
JDK-8248281 SparkExamples24H.java SIGSEGV in various places
-
- Resolved
-
-
JDK-8250093 SparkExamples24H.java SIGSEGV in various places
-
- Resolved
-
-
JDK-8250392 SparkExamples24H.java SIGSEGV in various places
-
- Resolved
-
- duplicates
-
JDK-8247786 JFR TestStressAllocationGCEventsWithDefNew.java failed "assert(hash != 0) failed: invariant"
-
- Closed
-
- relates to
-
JDK-8245113 JFR Recorder Thread to run in thread state "_thread_in_native"
-
- Resolved
-