8247967: SparkExamples24H.java SIGSEGV in various places

Reviewed-by: dcubed, dholmes